[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotalabs"
version = "0.0.1"
description = "Trust Intelligence Research - Core package from Rotalabs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Rotalabs", email = "research@rotalabs.ai" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "trust", "machine-learning", "research"]

[project.urls]
Homepage = "https://rotalabs.ai"
Repository = "https://github.com/rotalabs/rotalabs"
Documentation = "https://rotalabs.ai"
